objects/Budgetary_Quote_Item__c.object
<CustomObject>
    <fields>
        <fullName>Box_Score__c</fullName>
        <description>Used by Pricing Group Only. Not to be viewable by AM.</description>
        <label>Box Score</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budgetary_QuoteName__c</fullName>
        <formula>Budgetary_Quote__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Informal Quote Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgetary_Quote__c</fullName>
        <label>Informal Quote Id</label>
        <referenceTo>Informal_Quote__c</referenceTo>
        <relationshipLabel>Informal Quote Items</relationshipLabel>
        <relationshipName>Budgetary_Quote_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competitor_1_Complexity__c</fullName>
        <description>Provide the Complexity Details of Competitor 1 like Poly mask, Metal mask &amp; total no of mask</description>
        <inlineHelpText>Provide the Complexity Details of Competitor 1 like Poly mask, Metal mask &amp; total no of mask</inlineHelpText>
        <label>Masking Layers 1 Complexity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_1_Price_US__c</fullName>
        <label>Competitor 1 Price (US$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_2_Complexity__c</fullName>
        <description>Provide the Complexity Details of Competitor 1 like Poly mask, Metal mask &amp; total no of mask</description>
        <inlineHelpText>Provide the Complexity Details of Competitor 1 like Poly mask, Metal mask &amp; total no of mask</inlineHelpText>
        <label>Masking Layers 2 Complexity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_2_Price_US__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Competitor 2 Price (US$)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitors_1_Volume__c</fullName>
        <label>Competitors 1 Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitors_1__c</fullName>
        <description>Depends on Order Type:
Mask(Hoya, Photronic, DNP,Others)
Wafer(Jazz/Tower,Others,SMIC,Samsung,TSMC,UMC,Customer&apos;s Internal Fab)</description>
        <formula>Budgetary_Quote__r.Competitor1__r.Name</formula>
        <inlineHelpText>Depends on Order Type:
Mask(Hoya, Photronic, DNP,Others)
Wafer(Jazz/Tower,Others,SMIC,Samsung,TSMC,UMC,Customer&apos;s Internal Fab)</inlineHelpText>
        <label>Competitors_1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitors_2_Volume__c</fullName>
        <label>Competitors 2 Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitors_2__c</fullName>
        <description>Depends on Order Type:
Mask(Hoya, Photronic, DNP,Others)
Wafer(Jazz/Tower,Others,SMIC,Samsung,TSMC,UMC,Customer&apos;s Internal Fab)</description>
        <formula>Budgetary_Quote__r.Competitor_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Depends on Order Type:
Mask(Hoya, Photronic, DNP,Others)
Wafer(Jazz/Tower,Others,SMIC,Samsung,TSMC,UMC,Customer&apos;s Internal Fab)</inlineHelpText>
        <label>Competitors 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Price_for_AM__c</fullName>
        <label>Current Price for AM</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>D0_Commit_from_Pricing__c</fullName>
        <description>D0 Commit from Pricing</description>
        <inlineHelpText>D0 Commit from Pricing</inlineHelpText>
        <label>D0 Commit from Pricing</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D0_Commit_from_TE__c</fullName>
        <description>D0 Commit from TE</description>
        <inlineHelpText>D0 Commit from TE</inlineHelpText>
        <label>D0 Commit from TE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D0__c</fullName>
        <description>D0 Commit from Customer</description>
        <inlineHelpText>D0 Commit from Customer</inlineHelpText>
        <label>D0 Commit from Customer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <formula>((List_Price__c - Pricing_Approved_Price__c) / List_Price__c) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>List Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <formula>(( Pricing_Approved_Price__c -  Cost__c)  /  Pricing_Approved_Price__c)</formula>
        <label>Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_per_Mask_Layer__c</fullName>
        <formula>IF(CONTAINS( TEXT(Budgetary_Quote__r.Product_Category__c) , &quot;Wafer&quot;) , TEXT(ROUND(Pricing_Approved_Price__c/Budgetary_Quote__r.Total_Number_of_Masks__c,2)),&quot;NA&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price per Mask Layer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Approved_Price__c</fullName>
        <description>This is the recommended selling price set by Pricing Group.</description>
        <label>Pricing Approved Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity per Quater</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012-Q1</fullName>
                </value>
                <value>
                    <fullName>2012-Q2</fullName>
                </value>
                <value>
                    <fullName>2012-Q3</fullName>
                </value>
                <value>
                    <fullName>2012-Q4</fullName>
                </value>
                <value>
                    <fullName>2013-Q1</fullName>
                </value>
                <value>
                    <fullName>2013-Q2</fullName>
                </value>
                <value>
                    <fullName>2013-Q3</fullName>
                </value>
                <value>
                    <fullName>2013-Q4</fullName>
                </value>
                <value>
                    <fullName>2014-Q1</fullName>
                </value>
                <value>
                    <fullName>2014-Q2</fullName>
                </value>
                <value>
                    <fullName>2014-Q3</fullName>
                </value>
                <value>
                    <fullName>2014-Q4</fullName>
                </value>
                <value>
                    <fullName>2015-Q1</fullName>
                </value>
                <value>
                    <fullName>2015-Q2</fullName>
                </value>
                <value>
                    <fullName>2015-Q3</fullName>
                </value>
                <value>
                    <fullName>2015-Q4</fullName>
                </value>
                <value>
                    <fullName>2016-Q1</fullName>
                </value>
                <value>
                    <fullName>2016-Q2</fullName>
                </value>
                <value>
                    <fullName>2016-Q3</fullName>
                </value>
                <value>
                    <fullName>2016-Q4</fullName>
                </value>
                <value>
                    <fullName>2017-Q1</fullName>
                </value>
                <value>
                    <fullName>2017-Q2</fullName>
                </value>
                <value>
                    <fullName>2017-Q3</fullName>
                </value>
                <value>
                    <fullName>2017-Q4</fullName>
                </value>
                <value>
                    <fullName>2018-Q1</fullName>
                </value>
                <value>
                    <fullName>2018-Q2</fullName>
                </value>
                <value>
                    <fullName>2018-Q3</fullName>
                </value>
                <value>
                    <fullName>2018-Q4</fullName>
                </value>
                <value>
                    <fullName>2019-Q1</fullName>
                </value>
                <value>
                    <fullName>2019-Q2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Requested_Price__c</fullName>
        <description>Minimum Selling Price requested by the AM to quote to the customer.</description>
        <label>Sales Requested Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Yield_Commit_information_for_Pricing__c</fullName>
        <description>in percentage (%)</description>
        <inlineHelpText>in percentage (%)</inlineHelpText>
        <label>Yield Commit from Pricing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yield_Commit_information_for_TE__c</fullName>
        <description>in percentage (%)</description>
        <inlineHelpText>in percentage (%)</inlineHelpText>
        <label>Yield Commit from TE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Yield_Commit_information_for_customer__c</fullName>
        <description>in percentage (%)</description>
        <inlineHelpText>in percentage (%)</inlineHelpText>
        <label>Yield Commit from customer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Informal Quote Item</label>
    <nameField>
        <displayFormat>IQITEM-{00000}</displayFormat>
        <label>Informal Quote Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Informal Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Competitor_1_Complexity_cannot_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Budgetary_Quote__r.Competitor1__c)),ISBLANK(Competitor_1_Complexity__c))</errorConditionFormula>
        <errorMessage>Competitor 1 Complexity cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_1_Price_US_cannot_be_null</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Budgetary_Quote__r.Competitor1__c)),ISBLANK(Competitor_1_Price_US__c))</errorConditionFormula>
        <errorMessage>Competitor 1 Price US cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitors_1_Volume_cannot_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Budgetary_Quote__r.Competitor1__c)),ISBLANK(Competitors_1_Volume__c))</errorConditionFormula>
        <errorMessage>Competitors 1 Volume cannot be blank</errorMessage>
    </validationRules>
</CustomObject>